Added basic splashscreen

--- a/views/index.jade
+++ b/views/index.jade
@@ -8,5 +8,8 @@ head
 body
   div#gamecontainer
     canvas(id="gamecanvas" class="gamelayer")
-    div(id="playerselectscreen" class="gamelayer")
+    div(id="gamestartscreen" class="gamelayer")
+      img(src="img/icons/play.png" alt="Play Game")
+    div(id="factionselectscreen" class="gamelayer")
     div(id="mapscreen" class="gamelayer")
+  script(src="js/game.js" type="text/javascript" charset="utf-8")
