Added code to display faction shield on player turn

--- a/views/index.jade
+++ b/views/index.jade
@@ -14,4 +14,4 @@ body
       div#factionselectcontainer
 
     div(id="mapscreen" class="gamelayer")
-  script(src="js/game.js" type="text/javascript" charset="utf-8")
+  script(src="/js/bundle.js" type="text/javascript" charset="utf-8")
