--- a/views/index.jade
+++ b/views/index.jade
@@ -14,4 +14,6 @@ body
       div#factionselectcontainer
 
     div(id="mapscreen" class="gamelayer")
+    div(id="loadingscreen" class="gamelayer")
+      div#loadingmessage
   script(src="/js/bundle.js" type="text/javascript" charset="utf-8")
