--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1,8 +1,8 @@
 #gamecontainer {
   background: url(/img/splashscreen.png);
   /* iPad dimensions */
-  /*width: 768px;*/
-  /*height: 1024px;*/
+  width: 768px;
+  height: 1024px;
   background-size: cover; /* stretch image */
   background-repeat: no-repeat;
 }
