--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1,4 +1,5 @@
 #gamecontainer {
+  position: relative;
   background: url(/img/splashscreen.png);
   /* iPad dimensions */
   width: 768px;
@@ -59,3 +60,8 @@
   background-size: contain;
   background-repeat: no-repeat;
 }
+
+#playerscreen {
+  height: 172px;
+  bottom: 0;
+  left: 0;
