Troop icons now display their count

--- a/views/index.jade
+++ b/views/index.jade
@@ -17,14 +17,14 @@ body
       div#loadingmessage
 
     div(id="territoryscreen" class="gamelayer")
-      <img id="test" width="768" height="852" border="0" usemap="#map" />
+      <img src="/img/map.png" style="opacity:0" id="test" width="768" height="852" border="0" usemap="#map" />
       <map name="map">
       <!-- #$-:Image map file created by GIMP Image Map plug-in -->
       <!-- #$-:GIMP Image Map plug-in by Maurits Rijk -->
       <!-- #$-:Please do not edit lines starting with "#$" -->
       <!-- #$VERSION:2.3 -->
       <!-- #$AUTHOR:Nathan Liles   -->
-      <area shape="poly" coords="374,484,368,476,361,466,350,466,341,462,332,454,327,454,321,446,324,425,333,408,348,397,366,395,379,391,384,387,391,387,397,394,409,394,413,392,425,392,436,405,434,425,424,439,418,452,411,461,410,473,395,484" target="polarSink"  nohref="nohref" />
+      <area shape="poly" coords="374,484,368,476,361,466,350,466,341,462,332,454,327,454,321,446,324,425,333,408,348,397,366,395,379,391,384,387,391,387,397,394,409,394,413,392,425,392,436,405,434,425,424,439,418,452,411,461,410,473,395,484" target="polarSink" nohref="nohref" />
       <area shape="poly" coords="411,473,395,485,373,485,361,467,301,571,303,576,303,579,320,594,361,598,367,593,383,594,418,616,429,608,441,588,450,579,458,554" target="cielagoNorth"  nohref="nohref" />
       <area shape="poly" coords="360,467,307,558,293,530,292,501,310,453,322,449,327,455,332,455,340,462,351,467" target="windPassNorth"  nohref="nohref" />
       <area shape="poly" coords="412,473,412,461,418,454,436,470,456,461,469,468,463,492,451,491,448,489,443,489,443,506,439,519" target="hargPass"  nohref="nohref" />
